--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/fs-extra": "^11.0.4",
     "commander": "^12.1.0",
+    "fs-extra": "^11.2.0",
+    "sharp": "^0.33.5",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
